# practical-rust

chapter_II/catdex/: .env  Cargo.toml
chapter_II/catdex/migrations/2021-02-17-001053_create_cats/: down.sql  up.sql
chapter_II/catdex/src/: main.rs  models.rs
chapter_II/catdex/static/: cat.html  index.html
chapter_II/hello-world/: Cargo.toml
chapter_II/hello-world/src/: main.rs
chapter_III/catdex-api/: Cargo.toml  cert.pem  key-no-password.pem  key.pem
chapter_III/catdex-api/src/: errors.rs  main.rs  models.rs
chapter_III/catdex-api/static/: add.html  cat.html  index.css  index.html
chapter_IV/chat/: Cargo.toml
chapter_IV/chat/src/: main.rs
chapter_IV/chat/static/: chat.html  chat.js
chapter_IV/echo-server/: Cargo.toml
chapter_IV/echo-server/client/: index.html  index.js
chapter_IV/echo-server/src/: main.rs
