[package]
name = "catdex"
version = "0.1.0"
authors = ["Gvstavo <gustavopaivads@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
serde_json = "1.0.62"
serde = "1.0.123"
handlebars ={version="3.5.2", features=["dir_source"]}
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"