[package]
name = "catdex-api"
version = "0.1.0"
authors = ["Gvstavo <gustavopaivads@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
bson = "1.2.0"
mongodb = "1.2.0"
serde = "1.0.123"
serde_json = "1.0.62"
