[package]
name = "catdex-api"
version = "0.1.0"
authors = ["Gvstavo <gustavopaivads@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = { version = "3.3.2", features = ["openssl"] }
bson = "1.2.0"
derive_more = "0.99.11"
env_logger = "0.8.3"
futures = "0.3.12"
log = "0.4.14"
mongodb = "1.2.0"
openssl = "0.10.32"
serde = "1.0.123"
serde_json = "1.0.62"
